objects/EUR_CRM_Customer_Product_Price__c.object
<CustomObject>
    <description>PR EUR</description>
    <fields>
        <fullName>EUR_CRM_Bottle_Price__c</fullName>
        <label>Discount SKU Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Case_Price__c</fullName>
        <label>Campaign Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Customer_Product_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Discount_Price_End_Date__c</fullName>
        <label>Discount Price End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Effective_Date__c</fullName>
        <label>Campaign Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Expiry_Date__c</fullName>
        <label>Campaign Stop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>Customer_Product_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Product Price (EU)</label>
    <listViews>
        <fullName>Customer_Product_Prices</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Case_Price__c</columns>
        <columns>EUR_CRM_Effective_Date__c</columns>
        <columns>EUR_CRM_Expiry_Date__c</columns>
        <columns>EUR_CRM_Customer_Name__c</columns>
        <columns>EUR_CRM_Discount_Price_End_Date__c</columns>
        <columns>EUR_CRM_Bottle_Price__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Product_SKU__c</columns>
        <filterScope>Everything</filterScope>
        <label>Customer Product Prices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CPP-{00000000}</displayFormat>
        <label>Customer Product Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Prices (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Customer_Product_Price</fullName>
        <active>true</active>
        <label>EUR AO Customer Product Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Customer_Product_Price</fullName>
        <active>true</active>
        <label>EUR EE Customer Product Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Customer_Product_Price</fullName>
        <active>true</active>
        <label>EUR KE Customer Product Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Customer_Product_Price</fullName>
        <active>true</active>
        <label>EUR LT Customer Product Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Customer_Product_Price</fullName>
        <active>true</active>
        <label>EUR LV Customer Product Price</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Customer_Product_Price</fullName>
        <active>true</active>
        <label>EUR ZA Customer Product Price</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>